--- a/index.html
+++ b/index.html
@@ -9,21 +9,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>暖暖心理治療所0331/0400</title>
+    <title>暖暖心理治療所0401/0911</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/agency.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
+    <!-- 回到top按鈕 CSS -->
+    <link href="css/backTop.css" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -46,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">暖暖心理治療所</a>
+                <a class="navbar-brand page-scroll" href="#page-top">暖暖心理治療所愚人節版</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,9 +74,8 @@
     <!-- Header -->
     <header>
         <div class="container">
-<br>
-<br>
-<br>
+        <div class="col-lg-12 col-sm-6">
+        </div>
         </div>
     </header>
 
@@ -93,7 +86,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-7 col-sm-6">
-          <!--<hr class="section-heading-spacer">-->
+          <hr class="section-heading-spacer">
           <div class="clearfix"></div>
           <!--<h2 class="section-heading">關於心理諮商/心理治療</h2>-->
           <p class="lead">有時你會感到無法抑止的無助、憂傷， 自我否定，開始厭倦日復一日的生活日常。與家人、同事的互動失衡，衝突連連，屢屢挫敗的人際關係讓你感到無力。想要訴說卻不受家人與朋友接納。
@@ -219,7 +212,7 @@
               <h2 class="section-heading">暖暖心理治療所</h2>
               <p class="lead">嘉義市大頭路100號
                   <br>0800000000
-                  <br><a href="mailto:#">first.last@example.com</a>
+                  <br>first.last@example.com</a>
 
             </div>
             <div class="col-lg-6">
@@ -232,30 +225,15 @@
 <!-- /.banner -->
 <!-- Footer -->
 <footer>
+<div class="footer">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <ul class="list-inline">
-                    <li>
-                        <a href="#">Home</a>
-                    </li>
-                    <li class="footer-menu-divider">⋅</li>
-                    <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li class="footer-menu-divider">⋅</li>
-                    <li>
-                        <a href="#services">Services</a>
-                    </li>
-                    <li class="footer-menu-divider">⋅</li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-                <p class="copyright text-muted small">版權所有 © 暖暖心理治療所 2016. 保留所有權利 所長純手工打造(′・ω・‵)</p>
+                <p class="copyright">版權所有 © 暖暖心理治療所 2016. 保留所有權利 所長純手工打造(′・ω・‵)</p>
             </div>
         </div>
     </div>
+</div>
 </footer>
 
 
@@ -266,7 +244,7 @@
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
 
@@ -276,6 +254,20 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
+
+    <!-- 回到top按鈕 JavaScript -->
+    <a id='backTop'>Back To Top</a>
+    <script src="js/jquery.backTop.min.js"></script>
+    <script>
+        $(document).ready( function() {
+            $('#backTop').backTop({
+                'position' : 1600,
+                'speed' : 500,
+                'color' : 'black',
+            });
+        });
+    </script>
+    <script type="text/javascript">
 
 </body>
 
