--- a/index.html
+++ b/index.html
@@ -164,67 +164,18 @@
       </div>
   </div>
 </section>
-<section id="sectionR6">
-<div class="content-section-b">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-7 col-sm-6">
-                <hr class="section-heading-spacer">
-                <div class="clearfix"></div>
-                <h2 class="section-heading">聯繫/收費/服務時間</h2>
-                <p class="lead"></p>
-                <ul class="list-unstyled lead">
-                    <li>時間與價格</li>
-                    <li>成人會談
-                        <ul>
-                            <li>個別50分鐘 1600元</li>
-                            <li>伴侶會談 50分鐘 1600元</li>
-                        </ul>
-                    </li>
-                    <hr>
-                    <li>預約/聯繫</li>
-                    <ul>
-                        <li>本治療所採預約制，請至少在一日前聯繫。</li>
-                        <li>會談的時間是50分鐘，初次會談約30分鐘。</li>
-                        <li>取消或改期：事前取消並不收取費用，取消或改期請在約定時間前一日知會本所。</li>
-                    </ul>
-                    <hr>
-                    <li>預約時間：</li>
-                    <ul>
-                        <li>預約時間：週一至週五13:00-17:00</li>
-                        <li>服務時間：週二至週六13:00-21:00</li>
-                    </ul>
-                </ul>
-            </div>
-
-            <div class="col-lg-4 col-lg-offset-1 col-sm-6">
-                <img class="img-responsive" src="img/window.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
-
-            </div>
-        </div>
-    </div>
-</div>
-</section>
-<div class="banner">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-              <h2 class="section-heading">暖暖心理治療所</h2>
-              <p class="lead">嘉義市大頭路100號
-                  <br>0800000000
-                  <br>first.last@example.com</a>
-
-            </div>
-            <div class="col-lg-6">
-
-            </div>
-        </div>
-    </div>
-    <!-- /.container -->
-</div>
-<!-- /.banner -->
 <!-- Footer -->
-
+<footer>
+<div class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <p class="copyright">版權所有 © 暖暖心理治療所 2016. 保留所有權利 所長純手工打造(′・ω・‵)</p>
+            </div>
+        </div>
+    </div>
+</div>
+</footer>
 
 
     <!-- jQuery -->
