--- a/index.html
+++ b/index.html
@@ -81,89 +81,66 @@
 
     <!-- Services Section -->
 
-<section id="#">
-  <div class="content-section-a">
+
+<section id="sectionR6">
+<div class="content-section-b">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-7 col-sm-6">
-          <hr class="section-heading-spacer">
-          <div class="clearfix"></div>
-          <!--<h2 class="section-heading">關於心理諮商/心理治療</h2>-->
-          <p class="lead">有時你會感到無法抑止的無助、憂傷， 自我否定，開始厭倦日復一日的生活日常。與家人、同事的互動失衡，衝突連連，屢屢挫敗的人際關係讓你感到無力。想要訴說卻不受家人與朋友接納。
-          </p>
-          <p class="lead">也許你會經常性的感到憂慮，凡是總是往最糟的方向想，情緒經常起伏不定，傷及身邊的人，或者感到難以掌控自己的生活，只能沉迷在特定事物中麻痺自己。
-          </p>
-          <p class="lead">或者你正為關心的人煩心，親人、孩子在生活、學校中遭遇困難，而你想要了解能為他們做些什麼、協助他們脫離困境。
-          </p>
-          <p class="lead">生活中遭遇的各種大小事，都可以利用心理治療、心理諮商的服務。
-          </p>
+        <div class="row">
+            <div class="col-lg-7 col-sm-6">
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+                <h2 class="section-heading">聯繫/收費/服務時間</h2>
+                <p class="lead"></p>
+                <ul class="list-unstyled lead">
+                    <li>時間與價格</li>
+                    <li>成人會談
+                        <ul>
+                            <li>個別50分鐘 1600元</li>
+                            <li>伴侶會談 50分鐘 1600元</li>
+                        </ul>
+                    </li>
+                    <hr>
+                    <li>預約/聯繫</li>
+                    <ul>
+                        <li>本治療所採預約制，請至少在一日前聯繫。</li>
+                        <li>會談的時間是50分鐘，初次會談約30分鐘。</li>
+                        <li>取消或改期：事前取消並不收取費用，取消或改期請在約定時間前一日知會本所。</li>
+                    </ul>
+                    <hr>
+                    <li>預約時間：</li>
+                    <ul>
+                        <li>預約時間：週一至週五13:00-17:00</li>
+                        <li>服務時間：週二至週六13:00-21:00</li>
+                    </ul>
+                </ul>
+            </div>
+
+            <div class="col-lg-4 col-lg-offset-1 col-sm-6">
+                <img class="img-responsive" src="img/window.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
+
+            </div>
         </div>
-        <div class="col-lg-4 col-lg-offset-1 col-sm-6">
-          <img class="img-responsive" src="img/window.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 30px; PADDING-BOTTOM: 5px" alt="">
-        </div>
-      </div>
     </div>
-  </div>
+</div>
 </section>
-<section id="sectionR5">
-  <div class="content-section-b">
-      <div class="container">
-          <div class="row">
+<div class="banner">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+              <h2 class="section-heading">暖暖心理治療所</h2>
+              <p class="lead">嘉義市大頭路100號
+                  <br>0800000000
+                  <br>first.last@example.com</a>
 
-              <div class="col-lg-7 col-lg-offset-1 col-sm-6 col-sm-push-4"><!-- 如果不是小螢幕就往後推4格 -->
+            </div>
+            <div class="col-lg-6">
 
-                  <hr class="section-heading-spacer">
-                  <div class="clearfix"></div>
-                  <h2 class="section-heading">服務內容</h2>
-                  <p class="lead">
-                      兒童青少年心理諮商：學校適應、人際關係、情緒困擾、懼學、認知發展。
-                      <br>成人心理諮商：人際及情緒困擾、創傷、職場適應、兩性與伴侶關係。
-                      <br>心理測驗與評估：目前不提供此服務。
-                      <br>教師及新進心理師訓練：針對實務之案例討論、個別督導。
-                      <br>心理成長與調適工作坊：不定期舉辦。
-
-              </div>
-              <div class="col-lg-4 col-sm-6 col-sm-pull-8"><!-- 如果不是小螢幕就往前拉8格 -->
-                  <img class="img-responsive" src="img/LORA.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
-              </div>
-          </div>
-      </div>
-  </div>
-</section>
-<section id="sectionL6">
-  <div class="content-section-a">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-7 col-sm-6">
-                  <hr class="section-heading-spacer">
-                  <div class="clearfix"></div>
-                  <h2 class="section-heading">初次會談</h2>
-                  <p class="lead">心理諮商/心理治療是透過對話促進人成為他自己，
-                      <br>與一般聊天不同，心理治療/心理諮商利用討論你的生活、與他人的互動、有意義與難以承受之事。
-                      <br>這乃是一個透過聆聽與對話觸及深層的自我，進而引發療癒的方式。
-                      <br>尋求諮商或心理治療的協助前感到焦慮與猶疑是正常的現象，
-                      <br>在預約之後，心理師將與你約定時間進行第一次的會談，時間為50-90分鐘。
-                      <br>在初次會談中，心理師會嘗試了解當事人來此的原因，/評估/雙方是否對對方感到舒適，
-                      <br>以決定未來是否適宜一起工作，心理師也會評估自己的取向與能力是否符合你的需求。
-                      <br>初次會談可讓你體會諮商與心理治療可能牽涉的議題以及可能對你的幫助，
-                      <br>同時也可利用此時段詢問關於未來正式會談、個人隱私保護、收費的疑慮，以知悉自身權益。
-                      <br>在初次會談的過程中，可嘗試/感受/自身與心理師的契合程度，
-                      <br>探索對諮商與心理治療的期待、理解諮商與心理治療的限制。或者與心理師討論未來想要進行的方向。
-                      <br>在初次會談，並不需要承諾後續的會談進行與否，
-                      <br>倘若有繼續會談的意願，可在當下預約未來會面時間，也可待考慮之後再行預約。
-                      <br>若是兒童及青少年的諮商與心理治療，第一次會談建議家長前來與心理師會面，
-                      <br>以便使心理師了解家長希望在孩子身上看到的改變，
-                      <br>心理師也能藉此機會讓家長了解心理諮商與治療可能對孩子提供的協助以及其限制。
-                      <br>另外，心理師也會告知家長如何對孩子介紹諮商與心理治療，以協助孩子順利的進入後續的會談。</p>
-              </div>
-              <div class="col-lg-4 col-lg-offset-1 col-sm-6">
-
-                  <img class="img-responsive" src="img/window.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
-              </div>
-          </div>
-      </div>
-  </div>
-</section>
+            </div>
+        </div>
+    </div>
+    <!-- /.container -->
+</div>
+<!-- /.banner -->
 <!-- Footer -->
 <footer>
 <div class="footer">
