--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <h3 class="section-heading">聯繫/收費/服務時間</h3>
                 <p class="lead"></p>
                 <ul class="list-unstyled lead">
-                    <li>時間與價格</li>
+                    <li><h4>時間與價格</h4></li>
                     <li>成人會談
                         <ul>
                             <li>個別50分鐘 1600元</li>
