--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <h3 class="section-heading">聯繫/收費/服務時間</h3>
                 <p class="lead"></p>
                 <ul class="list-unstyled lead">
-                    <li><h4>時間與價格</h4></li>
+                    <li>時間與價格</li>
                     <li>成人會談
                         <ul>
                             <li>個別50分鐘 1600元</li>
@@ -251,13 +251,13 @@
 
     <!-- 回到top按鈕 JavaScript -->
     <a id='backTop'>Back To Top</a>
-    <script src="js/jquery.backTop.min.js"></script>
+    <script src="js/jquery.backTop.js"></script>
     <script>
         $(document).ready( function() {
             $('#backTop').backTop({
                 'position' : 400,
                 'speed' : 500,
-                'color' : 'black',
+                'color' : 'lemonade',
             });
         });
     </script>
