--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
             </div>
             <div class="col-lg-4 col-sm-6 col-sm-pull-8"><!-- 如果不是小螢幕就往前拉8格 -->
-                <object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/dog/dog.swf?3?" width="300" height="225"><param name="movie" value="http://cdn.abowman.com/widgets/dog/dog.swf?3?"></param><param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param><param name="bgcolor" value="FFFFFF"/></object>
+                <img class="img-responsive" src="img/LORA.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
             </div>
         </div>
     </div>
@@ -186,7 +186,7 @@
               </div>
               <div class="col-lg-4 col-lg-offset-1 col-sm-6">
 
-                  <object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/penguins/penguins.swf?" width="300" height="200"><param name="movie" value="http://cdn.abowman.com/widgets/penguins/penguins.swf?"></param><param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param><param name="scale" value="noscale"/><param name="salign" value="tl"/></object>
+                  <img class="img-responsive" src="img/window.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
               </div>
           </div>
       </div>
@@ -226,7 +226,7 @@
                 </ul>
             </div>
             <div class="col-lg-4 col-sm-6 col-sm-pull-8"><!-- 如果不是小螢幕就往前拉8格 -->
-                <object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/hamster/hamster.swf?" width="300" height="225"><param name="movie" value="http://cdn.abowman.com/widgets/hamster/hamster.swf?"></param><param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param></object>
+                <img class="img-responsive" src="img/LORA.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
             </div>
         </div>
     </div>
@@ -235,16 +235,14 @@
 <div class="banner">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-6">
               <h3 class="section-heading">暖暖心理治療所</h3>
               <p class="content">嘉義市大頭路100號
                   <br>0800000000
                   <br>first.last@example.com</a>
 
             </div>
-            <div class="col-lg-8">
-<object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/fish/fish.swf?up_fishColor1=555555&up_fishColor5=F45540&up_fishColor4=F45540&up_backgroundImage=http://&up_fishColor2=F45540&up_fishColor6=F45540&up_fishName=Fish&up_numFish=5&up_fishColor7=F45540&up_fishColor10=F45540&up_fishColor9=F45540&up_fishColor3=F45540&up_foodColor=FCB347&up_backgroundColor=FFF6F2&up_fishColor8=F45540&"
-width="800" height="150"><param name="movie" value="http://cdn.abowman.com/widgets/fish/fish.swf?up_fishColor1=555555&up_fishColor5=F45540&up_fishColor4=F45540&up_backgroundImage=http://&up_fishColor2=F45540&up_fishColor6=F45540&up_fishName=Fish&up_numFish=5&up_fishColor7=F45540&up_fishColor10=F45540&up_fishColor9=F45540&up_fishColor3=F45540&up_foodColor=FCB347&up_backgroundColor=FFF6F2&up_fishColor8=F45540&"></param><param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param><param name="scale" value="noscale"/><param name="salign" value="tl"/></object>
+            <div class="col-lg-6">
 
             </div>
         </div>
