--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body id="page-top" class="index">
+<body id="page-top" class="index" oncontextmenu="return false">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
