--- a/index.html
+++ b/index.html
@@ -85,14 +85,10 @@
           <hr class="section-heading-spacer">
           <div class="clearfix"></div>
           <!--<h3 class="section-heading">關於心理諮商/心理治療</h3>-->
-          <p class="content">有時你會感到無法抑止的無助、憂傷， 自我否定，開始厭倦日復一日的生活日常。與家人、同事的互動失衡，衝突連連，屢屢挫敗的人際關係讓你感到無力。想要訴說卻不受家人與朋友接納。
-          </p>
-          <p class="content">也許你會經常性的感到憂慮，凡是總是往最糟的方向想，情緒經常起伏不定，傷及身邊的人，或者感到難以掌控自己的生活，只能沉迷在特定事物中麻痺自己。
-          </p>
-          <p class="content">或者你正為關心的人煩心，親人、孩子在生活、學校中遭遇困難，而你想要了解能為他們做些什麼、協助他們脫離困境。
-          </p>
-          <p class="content">生活中遭遇的各種大小事，都可以利用心理治療、心理諮商的服務。
-          </p>
+          <p class="content">有時你會感到無法抑止的無助、憂傷， 自我否定，開始厭倦日復一日的生活日常。與家人、同事的互動失衡，衝突連連，屢屢挫敗的人際關係讓你感到無力。想要訴說卻不受家人與朋友接納。</p>
+          <p class="content">也許你會經常性的感到憂慮，凡是總是往最糟的方向想，情緒經常起伏不定，傷及身邊的人，或者感到難以掌控自己的生活，只能沉迷在特定事物中麻痺自己。</p>
+          <p class="content">或者你正為關心的人煩心，親人、孩子在生活、學校中遭遇困難，而你想要了解能為他們做些什麼、協助他們脫離困境。</p>
+          <p class="content">生活中遭遇的各種大小事，都可以利用心理治療、心理諮商的服務。</p>
           <p class="content">心理諮商/心理治療是透過對話促進人成為他自己，與一般聊天不同，心理治療/心理諮商利用討論你的生活、與他人的互動、有意義與難以承受之事。這乃是一個透過聆聽與對話觸及深層的自我，進而引發療癒的方式。</p>
         </div>
         <div class="col-lg-4 col-lg-offset-1 col-sm-6">
@@ -110,17 +106,16 @@
                   <hr class="section-heading-spacer">
                   <div class="clearfix"></div>
                   <h3 class="section-heading">服務內容</h3>
-                  <p class="content">
-                      兒童青少年心理諮商：學校適應、人際關係、情緒困擾、懼學、認知發展。
-                      <br>成人心理諮商：人際及情緒困擾、創傷、職場適應、兩性與伴侶關係。
-                      <br>心理測驗與評估：目前不提供此服務。
-                      <br>教師及新進心理師訓練：針對實務之案例討論、個別督導。
-                      <br>心理成長與調適工作坊：不定期舉辦。</p>
-                      <br>
-                      <p class="content">對於隱私的重視：隱私的維護是維護您的權益最重要的一環，本治療所不與其他機構共享資訊，為來談者保守秘密。
-                        <br>彈性的會談時段：本治療所包含夜間會談時段，可以在您下班或放學後進行會談。
-                        <br>自由決定是否繼續會談：當事人可自行決定持續進行會談與否。
-                        <br>透明的收費：收費如公告項目，除此之外不會再有其他費用。</p>
+                  <p class="content">兒童青少年心理諮商：學校適應、人際關係、情緒困擾、懼學、認知發展。
+    <br>成人心理諮商：人際及情緒困擾、創傷、職場適應、兩性與伴侶關係。
+    <br>心理測驗與評估：目前不提供此服務。
+    <br>教師及新進心理師訓練：針對實務之案例討論、個別督導。
+    <br>心理成長與調適工作坊：不定期舉辦。</p>
+
+<p class="content">對於隱私的重視：隱私的維護是維護您的權益最重要的一環，本治療所不與其他機構共享資訊，為來談者保守秘密。
+<br>彈性的會談時段：本治療所包含夜間會談時段，可以在您下班或放學後進行會談。
+<br>自由決定是否繼續會談：當事人可自行決定持續進行會談與否。
+<br>透明的收費：收費如公告項目，除此之外不會再有其他費用。</p>
               </div>
               <div class="col-lg-4 col-sm-6 col-sm-pull-8"><!-- 如果不是小螢幕就往前拉8格 -->
                   <img class="img-responsive" src="img/LORA.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
@@ -137,14 +132,11 @@
                   <hr class="section-heading-spacer">
                   <div class="clearfix"></div>
                   <h3 class="section-heading">初次會談</h3>
-                  <p class="content">尋求諮商或心理治療的協助前感到焦慮與猶疑是正常的現象，在預約之後，心理師將與你約定時間進行第一次的會談，時間為50-90分鐘。在初次會談中，心理師會嘗試了解當事人來此的原因，/評估/雙方是否對對方感到舒適，以決定未來是否適宜一起工作，心理師也會評估自己的取向與能力是否符合你的需求。
+                  <p class="content">尋求諮商或心理治療的協助前感到焦慮與猶疑是正常的現象，在預約之後，心理師將與你約定時間進行第一次的會談，時間為50-90分鐘。在初次會談中，心理師會嘗試了解當事人來此的原因，/評估/雙方是否對對方感到舒適，以決定未來是否適宜一起工作，心理師也會評估自己的取向與能力是否符合你的需求。</p>
+                  <p class="content">初次會談可讓你體會諮商與心理治療可能牽涉的議題以及可能對你的幫助，同時也可利用此時段詢問關於未來正式會談、個人隱私保護、收費的疑慮，以知悉自身權益。</p>
+                  <p class="content">在初次會談的過程中，可嘗試/感受/自身與心理師的契合程度，探索對諮商與心理治療的期待、理解諮商與心理治療的限制。或者與心理師討論未來想要進行的方向。</p>
+                  <p class="content">在初次會談，並不需要承諾後續的會談進行與否，倘若有繼續會談的意願，可在當下預約未來會面時間，也可待考慮之後再行預約。若是兒童及青少年的諮商與心理治療，第一次會談建議家長前來與心理師會面，以便使心理師了解家長希望在孩子身上看到的改變，心理師也能藉此機會讓家長了解心理諮商與治療可能對孩子提供的協助以及其限制。另外，心理師也會告知家長如何對孩子介紹諮商與心理治療，以協助孩子順利的進入後續的會談。</p>
 
-<p class="content">初次會談可讓你體會諮商與心理治療可能牽涉的議題以及可能對你的幫助，同時也可利用此時段詢問關於未來正式會談、個人隱私保護、收費的疑慮，以知悉自身權益。</p>
-
-<p class="content">在初次會談的過程中，可嘗試/感受/自身與心理師的契合程度，探索對諮商與心理治療的期待、理解諮商與心理治療的限制。或者與心理師討論未來想要進行的方向。</p>
-
-<p class="content">在初次會談，並不需要承諾後續的會談進行與否，倘若有繼續會談的意願，可在當下預約未來會面時間，也可待考慮之後再行預約。
-若是兒童及青少年的諮商與心理治療，第一次會談建議家長前來與心理師會面，以便使心理師了解家長希望在孩子身上看到的改變，心理師也能藉此機會讓家長了解心理諮商與治療可能對孩子提供的協助以及其限制。另外，心理師也會告知家長如何對孩子介紹諮商與心理治療，以協助孩子順利的進入後續的會談。</p>
               </div>
               <div class="col-lg-4 col-lg-offset-1 col-sm-6">
 
