--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <br>透明的收費：收費如公告項目，除此之外不會再有其他費用。</p>
               </div>
               <div class="col-lg-4 col-sm-6 col-sm-pull-8"><!-- 如果不是小螢幕就往前拉8格 -->
-                  <img class="img-responsive" src="img/LORA.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
+                  <img class="img-responsive" src="img/p1.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
               </div>
           </div>
       </div>
@@ -140,7 +140,7 @@
               </div>
               <div class="col-lg-4 col-lg-offset-1 col-sm-6">
 
-                  <img class="img-responsive" src="img/window.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
+                  <img class="img-responsive" src="img/p2.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
               </div>
           </div>
       </div>
@@ -160,7 +160,7 @@
 
             </div>
             <div class="col-lg-4 col-sm-6 col-sm-pull-8"><!-- 如果不是小螢幕就往前拉8格 -->
-                <img class="img-responsive" src="img/LORA.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
+                <img class="img-responsive" src="img/p3.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
             </div>
         </div>
     </div>
@@ -178,7 +178,7 @@
               </div>
               <div class="col-lg-4 col-lg-offset-1 col-sm-6">
 
-                  <img class="img-responsive" src="img/window.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
+                  <img class="img-responsive" src="img/p4.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
               </div>
           </div>
       </div>
@@ -218,7 +218,7 @@
                 </ul>
             </div>
             <div class="col-lg-4 col-sm-6 col-sm-pull-8"><!-- 如果不是小螢幕就往前拉8格 -->
-                <img class="img-responsive" src="img/LORA.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
+                <img class="img-responsive" src="img/p5.jpg" style="PADDING-LEFT: 5px; PADDING-RIGHT: 5px; PADDING-TOP: 90px; PADDING-BOTTOM: 5px" alt="">
             </div>
         </div>
     </div>
