--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>暖暖心理治療所0403/1138</title>
+    <title>暖暖心理治療所0404/1338</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -50,7 +50,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#sectionR5">服務內容</a>
+                        <a class="page-scroll" href="#sectionR5">服務項目</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#sectionL6">初次會談</a>
@@ -105,7 +105,7 @@
               <div class="col-lg-7 col-lg-offset-1 col-sm-6 col-sm-push-4"><!-- 如果不是小螢幕就往後推4格 -->
                   <hr class="section-heading-spacer">
                   <div class="clearfix"></div>
-                  <h3 class="section-heading">服務內容</h3>
+                  <h3 class="section-heading">服務項目</h3>
                   <p class="content">兒童青少年心理諮商：學校適應、人際關係、情緒困擾、懼學、認知發展。
     <br>成人心理諮商：人際及情緒困擾、創傷、職場適應、兩性與伴侶關係。
     <br>心理測驗與評估：目前不提供此服務。
