--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <div class="row">
             <div class="col-lg-6">
               <h3 class="banner-head">暖暖心理治療所</h3>
-              <p class="content">嘉義市大頭路100號
+              <p class="banner-content">嘉義市大頭路100號
                   <br>0800000000
                   <br>first.last@example.com</a>
 
