--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="心理師" ,"心理治療","心理諮商"="">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="暖暖心理治療所">
+    <meta name="copyright" content="本網頁著作權暖暖心理治療所所有">
 
     <title>暖暖心理治療所0406/0430</title>
 
